trunk/tests/kiama/negative/name_errors/L1/4_var4.ob
MODULE varname;

VAR
    avar5, avar5 : INTEGER;

END varname.
